<resources>
    <string name="app_name">TODO APP</string>

    <string name="developed_by">developed by</string>
    <string name="developer_name">Chanaka N. Bandara</string>
    <string name="splash_screen_logo_name">splash screen logo</string>

    <string name="enter_user_name">Username</string>
    <string name="enter_password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_acc_question">Don’t have an account? Sign up</string>

    <string name="enter_email">Email address</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_acc_question">Already have an account? Sign in</string>

    <string name="leading_icon_name">Leading</string>
    <string name="trailing_icon_name">Trailing</string>
    <string name="appbar_txt">Todo List</string>
    <string name="add_todo">+ Add todo</string>
    <string name="no_todo_txt">No tasks yet. Tap “+ Add todo” to add your first todo.</string>
    <string name="empty_todo_des">Empty todo</string>
    <string name="trailing_icon_des">Trailing icon</string>
    <string name="leading_icon_des">Leading icon</string>

    <string name="user_profile">User Profile</string>
    <string name="name">Name: Chanaka Bandara</string>
    <string name="student_no">Student no: 2019/T/00434</string>
    <string name="personal_statement">Personal statement: I am a Student</string>
    <string name="release_version">Release version: v 1.0.0</string>
    <string name="username">Username: Chanaka123</string>
    <string name="email">Email: mr.mbcnb@gmail.com</string>
    <string name="btn1_name">Edit details</string>
    <string name="btn2_name">Sign out</string>

</resources>