<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/appbar_bg_color"
        android:elevation="4dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- Left icon -->
            <ImageButton
                android:id="@+id/leftIcon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/leading_icon_des"
                android:src="@drawable/leading_icon" />

            <!-- Centered title -->
            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/appbar_txt"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/appbar_txt_color" />

            <!-- Right icon -->
            <ImageButton
                android:id="@+id/rightIcon1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/trailing_icon_des"
                android:src="@drawable/trailing_icon" />

        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <!-- Button -->
    <Button
        android:id="@+id/add_todo_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topAppBar"
        android:layout_marginLeft="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginRight="@dimen/margin_16"
        android:backgroundTint="@color/green_btn_color"
        android:text="@string/add_todo" />

    <!-- Centered ImageView with space above -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_todo_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_180"
        android:contentDescription="@string/empty_todo_des"
        android:src="@drawable/no_tasks_yet" />

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/no_todo_txt"
        android:textAlignment="center"
        android:textColor="@color/grey_txt_color"
        android:textSize="@dimen/font_size_14" />

</RelativeLayout>
